# TextToSpeech

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Text2Speach_ja_JP.ts  _CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ml_window.cpp  ml_window.h  ml_window.ui  python310._pth
log/: log.txt
python/: python_copnsole.bat  setenv.bat
python/Scripts/: numba
read/: read_up.txt
